--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "NODE_ENV=development && node --watch app.js",
-    "test": "NODE_ENV=test && NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "NODE_ENV=test && dotenv -e .env.test -- prisma migrate deploy && NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
