--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "NODE_ENV=development && node --watch server.js",
-    "test": "NODE_ENV=test && dotenv -e .env.test -- prisma migrate deploy && NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "NODE_ENV=test && dotenv -e .env.test -- prisma migrate deploy &&  NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test -- jest"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.20.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "express": "^4.21.1",
