--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "express": "^4.21.1",
-    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prisma": "^5.20.0"
   }
