--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "socket.io": "^4.8.1"
   }
 }
