--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "best facebook version",
   "main": "index.js",
   "devDependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   },
